topicとUserのアソシエーションが完了

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,11 @@
     <%= f.email_field :email, autofocus: true %>
   </div>
 
+  <!-- 名前入力用のフィールドを追加 -->
+  <div class="field">
+    <%= f.text_field :name, class: "form-control", placeholder: "名前" %>
+  </div>
+
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
