--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>name</th>
       <th>Title</th>
       <th>Content</th>
       <th colspan="3"></th>
@@ -14,6 +15,11 @@
   <tbody>
     <% @topics.each do |topic| %>
       <tr>
+        <% @users.each do |user| %>
+          <% if topic.user_id == user.id %>
+            <td><%= topic.user.name %></td>
+          <% end %>
+        <% end %>
         <td><%= topic.title %></td>
         <td><%= topic.content %></td>
         <td><%= link_to 'Show', topic %></td>
