--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -17,7 +17,9 @@
       <tr>
         <% @users.each do |user| %>
           <% if topic.user_id == user.id %>
-            <td><%= topic.user.name %></td>
+            <%= link_to topic_path(topic) do %>
+              <h4><strong><%= topic.title %></strong></h4>
+            <% end %>
           <% end %>
         <% end %>
         <td><%= topic.title %></td>
