コメントの編集と更新機能の実装

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -12,10 +12,12 @@
       </p>
     </div>
     <p>コメント一覧</p>
-    <div id="comments_area">
+    <div id="comments_list">
       <%= render partial: 'comments/index', locals: { comments: @comments, topic: @topic } %>
     </div>
-    <%= render partial: 'comments/form', locals: { comment: @comment, topic: @topic } %>
+    <div id="comment_form">
+      <%= render partial: 'comments/form', locals: { comment: @comment, topic: @topic } %>
+    </div>
     <% if current_user.id == @topic.user_id %>
       <%= link_to '編集', edit_topic_path(@topic) %> |
     <% end %>
