--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -1,12 +1,12 @@
 <ul>
   <% comments.each do |comment| %>
     <% unless comment.id.nil? %>
-      <li>
+      <li id="comment-area-<%= comment.id %>">
         <p class="left"><%= comment.user.name %>さんがコメントしました。</p>
         <p class="left"><%= comment.content %></p>
         <% if current_user.id == comment.user.id %>
           <p class="right">
-            <%= link_to '', edit_topic_comment_path(topic, comment), class: "fa fa-pencil-square-o fa-lg" %>
+            <%= link_to '', edit_topic_comment_path(topic, comment), remote: true, class: "fa fa-pencil-square-o fa-lg" %>
             <%= link_to '', topic_comment_path(topic, comment), class: "fa fa-trash-o fa-lg", method: :delete, remote: true, data: { confirm: '本当に削除していいですか？' } %>
           </p>
         <% end %>
