--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -18,7 +18,7 @@
         <% @users.each do |user| %>
           <% if topic.user_id == user.id %>
             <%= link_to topic_path(topic) do %>
-              <h4><strong><%= topic.title %></strong></h4>
+              <h4><strong><%= topic.user.name %></strong></h4>
             <% end %>
           <% end %>
         <% end %>
