--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,8 +2,10 @@
   <h2>ユーザー</h2>
   <% @users.each do |user| %>
       <div class="container-child col-md-2 col-sm-4 col-xs-6 ">
-        <%= profile_img(user) %>
-        <%= user.email %>
+        <%= link_to user_path(user) do %>
+          <%= profile_img(user) %>
+          <%= user.email %>
+        <% end %>
         <%= render 'follow_form', user: user %>
       </div>
   <% end %>
