--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,15 @@
           <%= profile_img(user) %>
           <%= user.email %>
         <% end %>
-        <%= render 'follow_form', user: user %>
+        <% if user.id != current_user.id %>
+          <li>
+            <div class="item">
+              <%= link_to user.name, user %>
+              <%= link_to 'メッセージ', conversations_path(sender_id: current_user.id, recipient_id: user.id), method: 'post'%>
+            </div>
+            <%= render partial: 'follow_form', locals: { user: user } if signed_in?   %>
+          </li>
+        <% end %>
       </div>
   <% end %>
 </div>
