--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,35 @@
  *= require_self
  */
 
+ body {
+   background-color: #E9EBEE;
+ }
+
  header {
    background-color: #3B5998;
+ }
+ header a:hover{
+   background-color: #3B5998;
+ }
+ .header-title,  .header-title:active, .header-title:visited,
+ #header-name, #header-name:active, #header-name:hover, #header-name:visited{
+    color: #fff;
+ }
+ .nav>li>a.to-edit {
+   height: 100%;
+   padding-bottom: 35px;
+ }
+ .nav>li>a.to-edit:hover {
+   background-color: #3B5998;
+   opacity: 0.8;
+ }
+
+ #header-name {
+   padding-top: 5px;
+ }
+
+ #header-img img{
+   width: 50px;
+   height: 30px;
+   margin-right: 10px;
  }
