--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,19 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Facebook", root_path, class: "navbar-brand" %>
+        <%= link_to "Facebook", root_path, class: "navbar-brand header-title" %>
       </div><!-- nav-bar -->
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
+          <li>
+            <%= link_to edit_user_registration_path, class: "to-edit" do %>
+              <ul class="nav navbar-nav">
+                <li id="header-img"><%= profile_img(current_user) %></li>
+                <li id="header-name"><%= current_user.name %></li>
+              </ul>
+            <% end %>
+          </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
@@ -44,7 +52,9 @@
     </div><!-- /.container-fluid -->
   </nav>
 </header>
-<%= yield %>
+<div class="container">
+  <%= yield %>
+</div>
 
 </body>
 </html>
