--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Topic</h1>
+<h1>投稿を編集する</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @topic %> |
-<%= link_to 'Back', topics_path %>
+<%= link_to '戻る', topics_path, class: 'btn btn-warning btn-block' %>
