--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require_tree .
  *= require_self
+ *= require font-awesome
  */
 
  body {
@@ -28,6 +29,21 @@
  #header-name, #header-name:active, #header-name:hover, #header-name:visited{
     color: #fff;
  }
+
+ .top-nav .dropdown a:hover {
+   background-color: #3B5998;
+ }
+
+ .header-icon {
+   color: #fff;
+   margin-top: 5px;
+ }
+.header-icon:visited {
+  color: #fff;
+}
+.header-icon:hover {
+  text-decoration: none;
+}
  .nav>li>a.to-edit {
    height: 100%;
    padding-bottom: 35px;
@@ -42,7 +58,7 @@
  }
 
  #header-img img{
-   width: 50px;
+   width: 30px;
    height: 30px;
    margin-right: 10px;
  }
