--- a/app/assets/stylesheets/topics.scss
+++ b/app/assets/stylesheets/topics.scss
@@ -1,3 +1,53 @@
 // Place all the styles related to the Topics controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.new-post a {
+  color: #fff;
+}
+
+.feed-area a:hover {
+  text-decoration: none;
+  background:none;
+}
+
+.topic-top {
+  img {
+    width: 30px;
+    height: 30px;
+  }
+  strong {
+    padding: 0 10px;
+  }
+}
+
+.topic-title {
+  padding-left: 10px;
+  border-left: 2px solid #ddd;
+}
+
+a.topic-top:hover {
+  color: #333;
+  text-decoration: none;
+}
+.feed-action li a {
+  padding-top: 0;
+  margin-top: 15px;
+}
+
+.feed-action li a:hover{
+  text-decoration: none;
+  background-color: #fff;
+  color: #000;
+}
+
+.panel-footer span {
+  border-right: 2px solid #ddd;
+  padding-right: 10px;
+}
+
+.panel-footer span a:hover {
+  text-decoration: none;
+  background-color: #F5F5F5;
+  color: #333;
+}
