--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,19 +18,25 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Facebook", root_path, class: "navbar-brand header-title" %>
+        <% if user_signed_in? %>
+          <%= link_to "", root_path, class: "fa fa-facebook-official fa-3x header-icon" %>
+        <% else %>
+          <%= link_to "Facebook", root_path, class: "navbar-brand header-title" %>
+        <% end %>
       </div><!-- nav-bar -->
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <%= link_to edit_user_registration_path, class: "to-edit" do %>
-              <ul class="nav navbar-nav">
-                <li id="header-img"><%= profile_img(current_user) %></li>
-                <li id="header-name"><%= current_user.name %></li>
-              </ul>
-            <% end %>
-          </li>
+        <ul class="top-nav nav navbar-nav navbar-right">
+          <% if user_signed_in? %>
+            <li>
+              <%= link_to edit_user_registration_path, class: "to-edit" do %>
+                <ul class="nav navbar-nav">
+                  <li id="header-img"><%= profile_img(current_user) %></li>
+                  <li id="header-name"><%= current_user.name %></li>
+                </ul>
+              <% end %>
+            </li>
+          <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
@@ -53,7 +59,11 @@
   </nav>
 </header>
 <div class="container">
-  <%= yield %>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <%= yield %>
+    <div>
+  </div>
 </div>
 
 </body>
