--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,37 +1,41 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Listing Topics</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>name</th>
-      <th>Title</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @topics.each do |topic| %>
-      <tr>
-        <% @users.each do |user| %>
-          <% if topic.user_id == user.id %>
-            <%= link_to topic_path(topic) do %>
-              <h4><strong><%= topic.user.name %></strong></h4>
-            <% end %>
-          <% end %>
-        <% end %>
-        <td><%= topic.title %></td>
-        <td><%= topic.content %></td>
-        <td><%= link_to 'Show', topic %></td>
-        <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
-        <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<div class="new-post">
+  <%= link_to '新規投稿', new_topic_path, class: 'btn btn-warning btn-block' %>
+</div>
 <br>
-
-<%= link_to 'New Topic', new_topic_path %>
+<div class="feed-area">
+  <% @topics.each do |topic| %>
+  <div class="panel panel-default feed-area">
+    <div class="panel-heading">
+      <% @users.each do |user| %>
+        <% if topic.user_id == user.id %>
+          <%= link_to edit_user_registration_path, class: "topic-top" do %>
+              <%= profile_img(user) %>
+              <strong><%= topic.user.name %></strong>
+          <% end %>
+          <%= link_to topic_path(topic), class: "topic-top topic-title" do %>
+            <%= topic.title %>
+          <% end %>
+          <ul class="feed-action nav navbar-nav navbar-right">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to '投稿を編集する', edit_topic_path(topic), class: "fa fa-pencil-square-o fa-lg"%></li>
+                <li><%= link_to '投稿を削除', topic, method: :delete, data: { confirm: '本当に消してもよろしいでしょうか?' }, class: "fa fa-trash-o fa-lg" %></li>
+              </ul>
+            </li>
+          </ul>
+        <% end %>
+      <% end %>
+    </div>
+    <div class="panel-body">
+      <%= topic.content %>
+    </div>
+    <div class="panel-footer">
+      <span><%= link_to 'コメントする', topic %></span>
+    </div>
+  </div>
+  <% end %>
+</div>
