--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Topic</h1>
+<h1>新規投稿</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', topics_path %>
+<%= link_to '戻る', topics_path, class: 'btn btn-warning btn-block' %>
