--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 <div class="child row">
-  <div class="wrapper col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
+  <div class="wrapper">
     <div class="topic-text">
       <p class="left"><strong>タイトル</strong></p>
       <p class="left"><%= @topic.title %></p>
