--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,13 @@
-<h3>ユーザーの友達リスト</h3>
+<h3><%= @user.name %>の友達リスト</h3>
 <% @friends.each do |friend| %>
-  <%= friend.name %>
+  <div class="col-xs-6">
+   <div class="friend-area">
+      <%= link_to user_path(friend.id), class: "friend-top" do %>
+        <%= profile_img(friend) %>
+        <%= friend.name %>
+      <% end %><br>
+      <p>友達<%= friend.friend.count %>人</p>
+
+    </div>
+  </div>
 <% end %>
