--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,7 @@
             <ul class="dropdown-menu">
               <% if user_signed_in? %>
             　  <li><%= link_to 'ユーザー一覧', users_path %></li>
+                <li><%= link_to '友達一覧', user_path(current_user.id) %></li>
                 <li><%= link_to "メッセージ", conversations_path %></li>
                 <li><%= link_to 'マイページ', edit_user_registration_path %></li>
                 <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
