--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -9,10 +9,10 @@
     <div class="panel-heading">
       <% @users.each do |user| %>
         <% if topic.user_id == user.id %>
-          <%= link_to edit_user_registration_path, class: "topic-top" do %>
+          <span class="topic-top">
               <%= profile_img(user) %>
               <strong><%= topic.user.name %></strong>
-          <% end %>
+          </span>
           <%= link_to topic_path(topic), class: "topic-top topic-title" do %>
             <%= topic.title %>
           <% end %>
