--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,17 +19,20 @@
           <span class="icon-bar"></span>
         </button>
         <% if user_signed_in? %>
-          <%= link_to "", root_path, class: "fa fa-facebook-official fa-3x header-icon" %>
+          <%= link_to "", authenticated_root_path, class: "fa fa-facebook-official fa-3x header-icon" %>
         <% else %>
-          <%= link_to "Facebook", root_path, class: "navbar-brand header-title" %>
+          <%= link_to "Facebook", unauthenticated_root_path, class: "navbar-brand header-title" %>
+        <% end %>
+        <%= link_to edit_user_registration_path, class: "pull-right to-edit sm-only" do %>
+          <span id="header-img"><%= profile_img(current_user) if user_signed_in? %></span>
         <% end %>
       </div><!-- nav-bar -->
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="top-nav nav navbar-nav navbar-right">
           <% if user_signed_in? %>
-            <li>
-              <%= link_to edit_user_registration_path, class: "to-edit" do %>
+            <li class="except-sm">
+              <%= link_to edit_user_registration_path, class: "to-edit except-sm" do %>
                 <ul class="nav navbar-nav">
                   <li id="header-img"><%= profile_img(current_user) %></li>
                   <li id="header-name"><%= current_user.name %></li>
@@ -38,8 +41,20 @@
             </li>
           <% end %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-              <span class="caret"></span>
+            <div class="sm-menu sm-only">
+              <% if user_signed_in? %>
+            　  <li><%= link_to 'ユーザー一覧', users_path %></li>
+                <li><%= link_to '友達一覧', user_path(current_user.id) %></li>
+                <li><%= link_to "メッセージ", conversations_path %></li>
+                <li><%= link_to 'マイページ', edit_user_registration_path %></li>
+                <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
+              <% else %>
+                <li><%= link_to 'ログイン', new_user_session_path %></li>
+                <li><%= link_to 'サインアップ', new_user_registration_path %></li>
+              <% end %>
+            </div>
+            <a href="#" class="dropdown-toggle except-sm" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <span class="caret sm-only"></span>
             </a>
             <ul class="dropdown-menu">
               <% if user_signed_in? %>
