--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,18 @@
-<div class="container">
-  <h2>ユーザー</h2>
-  <% @users.each do |user| %>
-      <div class="container-child col-md-2 col-sm-4 col-xs-6 ">
-        <%= link_to user_path(user), class: "user-top" do %>
-          <%= profile_img(user) %>
-          <%= user.email %>
-        <% end %>
-        <% if user.id != current_user.id %>
-          <li>
-            <div class="item">
-              <%= link_to user.name, user %>
-            </div>
-            <%= render partial: 'follow_form', locals: { user: user } if signed_in?   %>
-          </li>
-        <% end %>
-      </div>
-  <% end %>
-</div>
+
+<h2>ユーザー</h2>
+<% @users.each do |user| %>
+    <div class="container-child col-xs-6 user-info">
+      <%= link_to user_path(user), class: "user-top" do %>
+        <%= profile_img(user) %><br>
+        <%= user.email %>
+      <% end %>
+      <% if user.id != current_user.id %>
+        <li>
+          <div class="item">
+            名前:&nbsp;<%= link_to user.name, user %>
+          </div>
+          <%= render partial: 'follow_form', locals: { user: user } if signed_in?   %>
+        </li>
+      <% end %>
+    </div>
+<% end %>
