--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Messages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.item-wrap {
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+}
+.segment {
+  margin-bottom: 30px;
+}
