--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -53,4 +53,4 @@
 
 <p><%= button_to "アカウントを削除する", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger btn-block" %></p>
 
-<%= link_to "Back", :back %>
+<p class="back"><%= link_to "戻る", :back, class: 'btn btn-success btn-block' %></p>
