--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -6,7 +6,7 @@
   <% @messages.each do |message| %>
     <% if message.body %>
       <% user = User.find(message.user_id) %>
-      <div class="item">
+      <div class="item-wrap">
         <div class="content">
           <div class="header"><strong><%= user.name %></strong> <%= message.message_time %></div>
           <div class="list">
@@ -27,7 +27,7 @@
   </div>
     <%= f.text_field :user_id, value: current_user.id, type: "hidden"  %>
   <div>
-    <%= f.submit "メッセージを送る" %>
+    <%= f.submit "メッセージを送る", class: 'btn btn-primary btn-block' %>
   </div>
 
 <% end %>
