--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
         <% end %><br>
         <% @current_user_friends.each do |c_friend| %>
           <% if friend.id == c_friend.id %>
-            <%= link_to 'メッセージを送る', conversations_path(sender_id: current_user.id, recipient_id: @user.id), method: 'post'%>
+            <%= link_to 'メッセージを送る', conversations_path(sender_id: current_user.id, recipient_id: friend.id), method: 'post'%>
           <% end %>
         <% end %>
         <p>友達<%= friend.friend.count %>人</p>
